--- a/BsDsstar.tex
+++ b/BsDsstar.tex
@@ -214,7 +214,7 @@ We can check the non-oscillating ground-state energy of the correlator by lookin
 \end{align}
 It is straightforward to show from plugging in the fit form for 2-point corrleators (Eq. \eqref{eq:multiexponential}) that in the large $t$ (but $t < T_{\text{lat}}/2$) limit, this should tend towards the ground-state energy for the correlator. One can also construct a similar function for the amplitude:
 \begin{align}
-  a_{\text{eff}}(t) = \sqrt{{\cosh E_{\text{eff}}(t)-1\over 2} \,\,\tilde{C}(t) e^{E_{\text{eff}}(t)t} }\,.
+  a_{\text{eff}}(t) = \sqrt{ 2 \tilde{C}(t) e^{E_{\text{eff}}(t)t} \over \cosh E_{\text{eff}}(t)-1 }\,.
   \label{eq:effectiveamp}
 \end{align}
 The $\tilde{C}(t)e^{E_{\text{eff}}(t)t}$ factor would produce the correct amplitude (in the large-$t$ limit) in the absence of superaveraging, and the other factor corrects for the effect of the superaveraging. These functions, for various relevant correlators on the fine ensemble, are plotted in comparison with the full fit results in Fig. \ref{fig:2pt-summary_BsDsstar}.
