--- a/Thesis.bib
+++ b/Thesis.bib
@@ -1,4 +1,18 @@
 
+@article{McLean:2019qcx,
+      author         = "McLean, E. and Davies, C. T. H. and Koponen, J. and
+                        Lytle, A. T.",
+			      title          = "{$B_s\to D_s \ell\nu$ Form Factors for the full $q^2$
+                        range from Lattice QCD with non-perturbatively normalized
+                        currents}",
+			      year           = "2019",
+			            eprint         = "1906.00701",
+				          archivePrefix  = "arXiv",
+					        primaryClass   = "hep-lat",
+						      SLACcitation   = "%%CITATION = ARXIV:1906.00701;%%"
+						      }
+						      
+
 @article{Dowdall:2012ab,
       author         = "Dowdall, R. J. and Davies, C. T. H. and Hammant, T. C.
                         and Horgan, R. R.",
