--- a/TitlePage.tex
+++ b/TitlePage.tex
@@ -43,7 +43,7 @@
 \begin{center}
 {\large\textbf{Declaration of originality}}
 \end{center}
-This thesis is my own work, except where explicit attribution to others is made. Chapter \ref{chap:BsDsstar} is based on work presented in \cite{McLean:2019sds}, written in collaboration with Christine Davies, Andrew Lytle and Jonna Koponen. Chapter \ref{chap:BsDs} is based on work from a soon-to-be-released paper by the same authors.
+This thesis is my own work, except where explicit attribution to others is made. Chapter \ref{chap:BsDsstar} is based on work presented in \cite{McLean:2019sds}, written in collaboration with Christine Davies, Andrew Lytle and Jonna Koponen. The work in Chapter \ref{chap:BsDs} is presented in a paper by the same authors \cite{McLean:2019qcx}.
 
 All results and figures presented are my own, except for Fig. \ref{fig:alpha_s} which is courtesy of the Particle Data Group \cite{PhysRevD.98.030001}, Fig. \ref{fig:ckmpdg} from the HFLAV collaboration \cite{HFLAV16}, and Fig. \ref{fig:McNeile} from McNeile et. al \cite{McNeile:2012qf}. I also quote results from an in-progress study \cite{Colquhoun:2016osw} in Eq. \eqref{eq:Andrews_numbers}.
     
@@ -58,7 +58,7 @@ All results and figures presented are my own, except for Fig. \ref{fig:alpha_s} 
 \begin{center}
 %%   %% \emph{'Part of being a winner is knowing when enough is enough. Sometimes you have to give up the fight and walk away, and move on to something that's more productive.'} - Donald Trump
   %%   \emph{'Everything I know right now is probably wrong.'} - wdbm
-  \emph{'This hasn't gone anything like how I hoped'} - Dan Hatton
+  \emph{`This hasn't gone anything like how I hoped'} - Dan Hatton
 \end{center}
 \vspace{\stretch{3}}
 
