--- a/background.tex
+++ b/background.tex
@@ -13,7 +13,7 @@ The symmetries are the following. The Lorentz group $SO(3,1)$, the group of coor
 \begin{align}
   SU(3)_C\times SU(2)_L \times U(1)_Y,
 \end{align}
-irreps of which we denote with $(x,y,z)$, where $x,y$ label the $SU(3)_C$ and $SU(2)_L$ irreps and $z$ is the charge under $U(1)_Y$. The subscript $C$ stands for color, $L$ stands for 
+irreps of which we denote with $(x,y,z)$, where $x,y$ label the $SU(3)_C$ and $SU(2)_L$ irreps and $z$ is the charge under $U(1)_Y$. The subscript $C$ stands for color (corresponding to the {\it{strong nuclear force}}), $L$ denotes the {\it{weak nuclear force}}, and $Y$ denotes {\it{hypercharge}}.
 
 The field content is: gauge bosons for each of the above gauge symmetries, each transforming in the adjoint of their corresponding symmetry and in the $(1/2,1/2)$ irrep of the Lorentz group, denoted $B_{\mu}$, $W_{\mu}$, $G_{\mu}$ respectively. There are 6 $SU(2)_L$ doublets in the $(1/2,0)$ Lorentz irrep; the {\it{left-handed fermions}}:
 \begin{align}
