--- a/conclusions.tex
+++ b/conclusions.tex
@@ -22,9 +22,9 @@ Heavy-HISQ calculations are more computationally costly than their equivalent ca
 
 The dominant uncertainty in our heavy-HISQ results are statistical. Future calculations with this approach must increase the statistics of lattice data to improve on the results presented here. This means gaining data on more gauge configurations, and with more choices of source timeslice $t_0$. This will simply require more computational resources to achieve.
 
-These two resuls from heavy-HISQ are in strong agreement with all other recent lattice determinations of these form factors and the analogous $B\to D^*\ell \nu$ and $B\to D\ell\nu$ form factors. Other lattice determinations use very different methodologies to the work presented here, compare for example our $h_{A_1}^s(1)$ calculation to the Fermilab/MILC calculation of $h_{A_1}(1)$. That calculation used different gauge ensembles ($N_f=2+1$ MILC), a different action for the $b$ and $c$ quarks (Fermilab action), different approach to analyzing correlation functions (double-ratio approach), different normalization of currents (perturbative normalization), and different continuum and light mass extrapolation. The combination of consistent results from independent studies makes the overall contribution of lattice QCD to $b\to c$ form factors extremely robust.
+These two resuls from heavy-HISQ are in strong agreement with all other recent lattice determinations of these form factors and the analogous $B\to D^*\ell \nu$ and $B\to D\ell\nu$ form factors. Other lattice determinations use very different methodologies to the work presented here, compare for example our $h_{A_1}^s(1)$ calculation to the Fermilab/MILC calculation of $h_{A_1}(1)$. That calculation used different gauge ensembles ($N_f=2+1$ MILC), a different action for the $b$ and $c$ quarks (Fermilab action), a different approach to analyzing correlation functions (double-ratio approach), a different normalization of currents (perturbative normalization), and different continuum and light mass extrapolation. The combination of consistent results from independent studies makes the overall contribution of lattice QCD to $b\to c$ form factors extremely robust.
 
-Further contributions of form factors from lattice QCD are necessary in $b\to c$ transitions. The current precision on $|V_{cb}|$ is limited in roughly equal part by theoretical and experimental errors, so more precision on $b\to c$ form factors is needed to more precisely determine $|V_{cb}|$, and understand the source of the tension in its exclusive/inclusive determinations. The SM predictions of $R(D_{(s)}^{(*)})$ are currently much more precise than the experimental measurements, however more independent SM calculations of these ratios are necessary to ensure no errors are being underestimated.
+Further contributions from lattice QCD are necessary in $b\to c$ transitions. The current precision on $|V_{cb}|$ is limited in roughly equal part by theoretical and experimental errors, so more precision on $b\to c$ form factors is needed to more precisely determine $|V_{cb}|$, and understand the source of the tension in its exclusive/inclusive determinations. The SM predictions of $R(D_{(s)}^{(*)})$ are currently much more precise than the experimental measurements, however more independent SM calculations of these ratios are necessary to ensure no errors are being underestimated.
 
 %Going into the future, where computational cost becomes less of an issue, it is clear which of these is the smart choice. Let no one ever have to scratch their head over such a choice again.
 
